--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "http-server"
   },
   "dependencies": {
-    "ws": "^8.6.0",
-    "http-server": "^14.0.0"
+    "express": "^4.18.2",
+    "http-server": "^14.0.0",
+    "ws": "^8.6.0"
   }
 }
